# iBreeze

./: .gitignore  AGENTS.md  README.md  coverage-exclusions.yml  docker-compose.yml
admin-backend/: alembic.ini  pyproject.toml
admin-backend/app/: config.py  database.py  main.py  seed.py
admin-backend/app/api/: audit.py  auth.py  backends.py  capabilities.py  companies.py  deps.py  governance.py  knowledge.py  prompts.py  providers.py  skills.py  sync.py  templates.py
admin-backend/app/auth/: jwt.py  rbac.py  service.py
admin-backend/app/models/: __init__.py  admin.py  backend.py  base.py  capability.py  governance.py  knowledge.py  organization.py  provider.py  template.py
admin-backend/app/schemas/: audit.py  auth.py  capability.py  company.py  governance.py  knowledge.py  provider.py  sync.py
admin-backend/migrations/: env.py
admin-backend/migrations/versions/: bcbc5b93b85a_0001_initial_schema.py
admin-backend/tests/: conftest.py  test_audit_api.py  test_auth.py  test_backends_api.py  test_capabilities_api.py  test_companies_api.py  test_config.py  test_direction_constraint.py  test_governance_api.py  test_health.py  test_jwt.py  test_knowledge_api.py  test_migration.py  test_prompts_api.py  test_providers_api.py  test_rbac.py  test_seed.py  test_skills_api.py  test_sync_api.py  test_templates_api.py
apps/backend-api/: Dockerfile  alembic.ini  pyproject.toml
apps/backend-api/alembic/: env.py
apps/backend-api/dev-token-secret-change-me/: signing_key.kid  signing_key.pem  signing_key.pub
apps/backend-api/migrations/: 001_initial_schema.sql
apps/backend-api/tests/: conftest.py  test_auth.py  test_catalog.py  test_compatibility.py  test_middleware.py  test_migrations.py  test_releases.py  test_skills.py  test_users.py  test_zip_service.py
apps/desktop-core/: Cargo.toml  tauri.conf.json
apps/desktop-core/src/: commands.rs  error.rs  keyring.rs  lib.rs  main.rs  sidecar.rs  store.rs  trust.rs  types.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
sidecar/: pyproject.toml
sidecar/acos/: __init__.py  app.py  supervisor.py
sidecar/acos/audit/: __init__.py  models.py  repository.py
sidecar/acos/backends/: models.py  service.py
sidecar/acos/capability/: context_builder.py  engine.py  metrics.py  models.py  prompt_service.py  quality_gate.py  service.py  skill_service.py  snapshot.py  tool_binding.py  versioning.py
sidecar/acos/events/: __init__.py  models.py  outbox.py
sidecar/acos/governance/: __init__.py  budget.py  models.py  service.py
sidecar/acos/interventions/: models.py  repository.py
sidecar/acos/knowledge/: __init__.py  chunker.py  embedding.py  extractor.py  models.py  policy_service.py  raw_store.py  reconciler.py  retriever.py  service.py  vector_store.py
sidecar/acos/observability/: __init__.py  models.py  service.py
sidecar/acos/organization/: closure.py  dissolution.py  employee_drain_service.py  employee_service.py  models.py  permission_engine.py  principal.py  reporting_closure.py  service.py  template_service.py
sidecar/acos/providers/: base.py  credential_broker.py  fake.py  pricing.py  provider-models.json  registry.py
sidecar/acos/rpc/: __init__.py  dto.py  errors.py  idempotency.py  methods.py  methods_approval.py  methods_audit.py  methods_backend.py  methods_capability.py  methods_gov.py  methods_kg.py  methods_knowledge.py  methods_org.py  methods_provider.py  methods_session.py  methods_settings.py  methods_sys.py  methods_task.py  methods_workflow.py  server.py  streaming.py
sidecar/acos/runtime/: __init__.py  adapter.py  employee_drain_port.py  handoff.py  models.py  path_broker.py  resume.py  session.py  session_thread_store.py  transcript.py
sidecar/acos/sessions/: models.py  service.py
sidecar/acos/settings/: service.py
sidecar/acos/store/: __init__.py  append_only.py  backup.py  base_model.py  migrator.py  query_builder.py
sidecar/acos/sync/: puller.py
sidecar/acos/task/: checkpoint.py  cost_policy.py  merge.py  models.py  plan_validator.py  planner.py  repository.py  scheduler.py  service.py  strategies_parallel_review.py  workspace_strategy.py
sidecar/acos/workflows/: models.py  service.py
sidecar/ibreeze/: agent_runtime.py  audit.py  company.py  conversation.py  employee.py  knowledge.py  local_db.py  logging_config.py  main.py  orchestration.py  performance.py  rpc_server.py  schemas.py  security_config.py  state_machine.py  workspace.py
sidecar/ibreeze/assets/: __init__.py  manifest.json  manifest.schema.json
sidecar/ibreeze/orchestration/: __init__.py  department_matcher.py  (+1 more)
sidecar/migrations/: 0001_schema_migrations.sql  0002_domain_events.sql  0003_audit_tables.sql  0004_local_owner.sql  0005_human_interventions.sql  0006_rpc_idempotency.sql  0007_backup_tables.sql  0008_companies.sql  0009_departments.sql  0010_skills_prompts.sql  0011_capabilities.sql  0012_capability_snapshots.sql  0013_capability_metrics.sql  0014_employee_templates.sql  0015_employees.sql  0016_access_grants.sql  0017_employee_drains.sql  0018_providers_backends.sql  0019_sessions.sql  001_initial_schema.sql  0020_knowledge.sql  0021_tasks.sql  0022_governance.sql  0023_observability.sql  0024_employees_add_deleted_at.sql  0025_capability_version_tables.sql  0027_access_grants_revoked_at.sql  0028_backend_registry.sql  0030_provider_models_extend.sql  0031_provider_model_prices.sql  0032_provider_budget_freezes.sql  0033_provider_availability.sql  0034_credential_runtime.sql  0035_governance_approval.sql  0036_governance_tables.sql  0037_governance_budget_ext.sql  0038_settings_policies.sql  0040_session_threads_extend.sql  0041_conversation_events.sql  0042_session_transfer_journal.sql  (+20 more)
sidecar/tests/: _sidecar_helper.py  conftest.py  test_agent_runtime.py  test_app_integration.py  test_audit.py  test_company.py  test_company_atomic.py  test_conversation.py  test_defects_sc_fixes.py  test_employee.py  test_knowledge.py  test_local_db.py  test_orchestration.py  test_rpc_server.py  test_rpc_slimmed.py  test_schemas.py  test_state_machine.py  test_supervisor.py  test_workspace.py
(+439 files in other folders)
