[project]
name = "ibreeze-sidecar"
version = "0.1.0"
description = "iBreeze Desktop Sidecar"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.10,<3",
    "aiosqlite>=0.20,<1",
    "lancedb>=0.17,<1",
    "onnxruntime>=1.20,<2",
    "structlog>=24.0,<25",
    "click>=8.0,<9",
    "uvicorn>=0.34,<1",
    "httpx>=0.28,<1",
]

[project.scripts]
ibreeze-sidecar = "ibreeze.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "mypy>=1.13,<2",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ibreeze"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["ibreeze"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
