[project]
name = "ibreeze-backend-api"
version = "0.1.0"
description = "iBreeze Admin Backend API"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic[email]>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "PyJWT[crypto]>=2.0,<3",
    "passlib[argon2]>=1.7,<2",
    "httpx>=0.28,<1",
    "structlog>=24.0,<25",
    "boto3>=1.35,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "mypy>=1.13,<2",
    "ruff>=0.8,<1",
    "httpx>=0.28,<1",
    "testcontainers[postgres]>=4.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibreeze_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["ibreeze_backend"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
