[package]
name = "ibreeze-desktop-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "ibreeze_desktop_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
secrecy = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
