[package]
name = "ibreeze-desktop-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "ibreeze_desktop_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
url = "2"
keyring = { version = "3", features = ["apple-native"] }
data-encoding = "2"
ed25519-dalek = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
