[package]
name = "ibreeze-desktop"
version = "0.1.0"
description = "iBreeze Desktop Application"
authors = ["iBreeze Team"]
edition = "2021"

[lib]
name = "ibreeze_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
lazy_static = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
